# paid-image-api

./: .env.example  .gitignore  CLAUDE.md  README.md  agents.txt  hardhat.config.js  llms.txt  openapi.json  package-lock.json  package.json  render.yaml  test-api.js  test-save.js
contracts/: PXPToken.sol  PixelPayMarket.sol  PixelPayNFT.sol
examples/: full-flow.js  manual-pay.js
mcp/: package-lock.json  package.json
mcp/src/: index.js
public/: _theme_append.css  animations.js  gallery.html  index.html  marketplace.html  nav.js  profile.html  studio.html  styles.css  swap.html
python-sdk/: README.md  pyproject.toml
python-sdk/pixelpay/: __init__.py  client.py  errors.py
scripts/: check-usdc-balance.js  deploy-pxp.js  deploy.js  smoke-paid-request.js  test-transaction.js
sdk/: README.md  package-lock.json  package.json
sdk/src/: index.ts  types.ts
src/: index.js  mpp.js  x402.js
